--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,19 @@
         <activity android:name=".SettingActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".ResetPasswordActivity" />
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".SplashActivity">
-
-        </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".GetData">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SplashActivity">
+
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".GetData">
+
 
         </activity>
     </application>
