--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity">
-
-        </activity>
+        <activity android:name=".SplashActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".GetData">
+        <activity android:name=".GetData" />
+        <activity android:name=".ServiceActivity" />
 
-
-        </activity>
+        <activity
+            android:name=".dialogs.AddServiceDialog"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".dialogs.AddTypeServiceDialog"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".dialogs.AddPapersServiceDialog"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity android:name=".dialogs.PlacesServiceDialog"
+            android:theme="@style/Theme.AppCompat.Dialog" ></activity>
     </application>
 
 </manifest>
