--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,18 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".SplashActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".GetData" />
+        <activity android:name=".ServiceActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".GetData" />
-        <activity android:name=".ServiceActivity" />
         <activity
             android:name=".dialogs.AddServiceDialog"
             android:theme="@style/Theme.AppCompat.Dialog" />
@@ -54,9 +56,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
         <activity
             android:name=".MappPlaces"
             android:label="@string/title_activity_mapp_places"></activity>
