--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name=".dialogs.AddServiceDialog"
-            android:theme="@style/Theme.AppCompat.Dialog" />
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert" />
         <activity android:name=".dialogs.AddTypeServiceDialog" />
         <activity android:name=".dialogs.AddPapersServiceDialog" />
         <!-- android:theme="@style/Theme.AppCompat" -->
@@ -61,7 +61,9 @@
         <activity android:name=".ShowAllTypeService" />
         <activity android:name=".UpdatePapersService" />
         <activity android:name=".UpdatePlace" />
-        <activity android:name=".ContunioUpdating"></activity>
+        <activity
+            android:name=".ContunioUpdatingPlaces"
+            android:label="@string/title_activity_contunio_updating_places"></activity>
     </application>
 
 </manifest>
